<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz">QUIZ</string>
    <string name="getStarted">GET STARTED</string>
    <string name="userName">Your Name</string>
    <string name="your_name">Your Name</string>
    <string name="SecondActivity_Title">The name of the player is:</string>
    <string name="choose_contact">CHOOSE CONTACT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_next_button">Next</string>
    <string name="quiz_result">Quiz Result</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="fragment_home_title">Enjoy the quiz app,where you can:</string>
    <string name="test_your_skills">TEST YOUR SKILLS</string>
    <string name="read_questions">READ QUESTIONS</string>
    <string name="create_questions">CREATE QUESTIONS</string>
    <string name="profile_player_name">Player name:</string>
    <string name="profile_high_score">High score:</string>
    <string name="home">Home</string>
    <string name="quiz_time">Quiz time</string>
    <string name="profile">Profile</string>
    <string name="list_of_questions">List of questions</string>
    <string name="new_question">New question</string>
    <string name="menu_options">Menu Options</string>
    <string name="subtitle">Enjoy the quiz</string>
    <string name="profile_photo">profile photo</string>
    <string name="answers_label">Answers</string>
    <string name="add_question">ADD QUESTION</string>
    <string name="type_your_question_here">Type your question here</string>
    <string name="new_answer">New answer</string>
    <string name="details_button_text">DETAILS</string>
    <string name="delete_button_text">DELETE</string>
</resources>